--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1132,7 +1132,7 @@ header.sticky-top {
 }
 
 .modal .modal-dialog .btn-grp {
-  padding: 12px 12px 0;
+  padding: 10px 10px 0;
   border-top: 1px solid #dee2e6;
   margin: 10px -12px 0;
   text-align: right;
@@ -1214,8 +1214,8 @@ header.sticky-top {
 .modal .btn {
   font-size: 16px;
   margin-right: 10px;
-  padding: 4px 10px;
-  line-height: 22px;
+  padding: 4px 10px 0;
+  line-height: 25px;
   height: auto;
   border: none;
   border-radius: 2px;
@@ -1854,7 +1854,7 @@ header.sticky-top {
 
 .open-left-sidebar-nav svg {
   position: relative;
-  left: -3px;
+  left: -2px;
   top: -7px;
 }
 
@@ -2000,7 +2000,7 @@ header.sticky-top {
   flex-wrap: wrap;
   margin-bottom: 10px;
   background: #ccced1;
-  padding: 4px 10px;
+  padding: 4px;
 }
 
 .main .top-grid-filter .filter-refine-by {
@@ -2174,6 +2174,10 @@ header.sticky-top {
   display: inline-block;
 }
 
+.new-symbol img {
+  width: 16px;
+}
+
 .ota {
   display: inline-block;
   color: #fff;
@@ -2185,22 +2189,58 @@ header.sticky-top {
   line-height: 14px;
   letter-spacing: 0.7px;
   width: 30px;
-  height: 13px;
+  height: 14px;
   margin-left: 4px;
+  font-family: "Avenir-black";
 }
 
-.new-symbol img {
-  width: 16px;
-}
-
-.network-filter-popup .filter-popup .network-filter-bottom .digi-symbol {
-  margin-right: 6px;
-  font-size: 8px;
-  width: 25px;
-  line-height: 13px;
-  height: 13px;
+.learn-abt-digi {
   position: relative;
-  top: 2px;
+}
+
+.dpi-newnetwork .network-label-container {
+  margin-top: 0;
+  display: flex;
+  align-items: center;
+}
+
+.network-label-container {
+  font-size: 14px;
+  color: #000;
+  margin-top: -22px;
+}
+
+.network-label-container img {
+  width: 16px;
+  margin-right: 6px;
+}
+
+.digi-popup {
+  background: #f4f5f6;
+  font-size: 13px;
+  padding: 6px 5px;
+  width: 550px;
+  margin: auto;
+  position: absolute;
+  color: #505051;
+  top: -80px;
+  left: 35px;
+  box-shadow: 0px 3px 6px 3px rgba(0, 0, 0, .2);
+}
+
+.digi-popup p {
+  font-size: 11px;
+  margin: 0;
+  padding: 5px 22px 5px 10px;
+  text-align: left;
+}
+
+.digi-close img {
+  filter: brightness(0.5);
+  position: absolute;
+  right: 4px;
+  width: 18px;
+  top: 4px;
 }
 
 .network-filter-popup .filter-popup .rate-review-request {
@@ -2217,7 +2257,6 @@ header.sticky-top {
 .network-filter-popup .filter-popup .network-filter-bottom {
   margin-top: 2px;
   border-top: 1px solid #bcbdc1;
-  padding-top: 15px;
 }
 
 .networkSelectBtn.btn-disabled {
@@ -2226,6 +2265,12 @@ header.sticky-top {
   pointer-events: none;
   opacity: 1;
 }
+
+
+.network-filter-popup .filter-popup .network-filter-bottom .dpi-newnetwork a div {
+  text-decoration: underline;
+}
+
 
 .filter-popup ul {
   display: flex;
@@ -2237,6 +2282,13 @@ header.sticky-top {
 .filter-popup ul li {
   display: flex;
   align-items: center;
+}
+
+.excel-download img {
+  margin-right: 3px;
+  width: 16px;
+  position: relative;
+  top: -1px;
 }
 
 .filter-popup ul li h5 {
@@ -2266,7 +2318,7 @@ header.sticky-top {
 .filter-popup .filter-in-letters a {
   color: #fff;
   font-size: 18px;
-  line-height: normal;
+  line-height: 18px;
   padding: 4px 12px;
   border: none;
   margin: 0 1px;
@@ -2287,16 +2339,20 @@ header.sticky-top {
 
 .network-filter-popup .filter-popup .filter-in-letters a.ln-disabled {
   color: #848484;
-  background: #eaeaea;
+  /* background: #eaeaea; */
   cursor: not-allowed;
+}
+
+.network-filter-popup .filter-popup .filter-in-letters a.ln-disabled:hover {
+  background: none;
 }
 
 .filter-popup .networklist {
   width: 100%;
   overflow: hidden;
-  height: 325px;
+  height: 320px;
   overflow-y: auto;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   display: block;
   align-items: self-start;
 }
@@ -2304,7 +2360,7 @@ header.sticky-top {
 .filter-popup .networklist li {
   max-width: 282px;
   display: inline-block;
-  margin: 8px 8px;
+  margin: 4px;
   width: 100%;
   margin-left: 0;
 }
@@ -2339,7 +2395,6 @@ header.sticky-top {
 .filter-popup .network-filter-bottom .dpi-newnetwork a {
   color: #fff;
   display: flex;
-  text-decoration: underline;
 }
 
 .filter-popup .network-filter-bottom .dpi-newnetwork a::after {
@@ -2358,6 +2413,14 @@ header.sticky-top {
 
 .dpi-symbol {
   display: inline-block;
+  background: #00bdff;
+  color: #fff;
+  padding: 2px 4px 0;
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 12px;
+  font-family: "Avenir-black";
 }
 
 .dpi-symbol img {
@@ -2494,6 +2557,10 @@ header.sticky-top {
   background: #efefef;
 }
 
+.tfn-url .search-input1 {
+  width: 100%;
+}
+
 .search-tips {
   margin: 10px 0;
   width: 100%;
@@ -2513,6 +2580,7 @@ header.sticky-top {
   display: block;
   font-weight: 700;
   padding: 4px 0;
+  text-align: left;
 }
 
 .search-tips li.search-tips-uses ul {
@@ -4685,6 +4753,15 @@ header.sticky-top {
   color: #fff;
 }
 
+
+.filter_save_error {
+  background: #c21a05;
+}
+
+.filter_save_success {
+  background: #43ac6a;
+}
+
 /*mobile responsive*/
 
 @media (max-height: 800px) {
@@ -4730,10 +4807,7 @@ header.sticky-top {
   } 
   .nav-menu>li:first-child div {
     height: 45px;
-  }  
-  .nav-menu .global-search form > div {
-    width: 100%;
-  }  
+  }
   .nav-menu>li:first-child img {
     width: 98px;
     height: 45px;
@@ -4747,6 +4821,9 @@ header.sticky-top {
     border: none;
     display: flex;
   }
+  .nav-menu .global-search form > div {
+    width: 100%;
+  }    
   .search-text-validation-error {
     margin-top: 8px;
     margin-left: 20px;
@@ -5107,10 +5184,6 @@ header.sticky-top {
     flex-wrap: wrap;
     border: none;
   }
-  .nav-menu .global-search {
-    padding: 10px;
-    flex: 1;
-  }
   .network-filter-popup .top-filter-bar li:last-child {
     display: block;
   }
@@ -5145,17 +5218,8 @@ header.sticky-top {
   .black-top-menu {
     display: block;
   }
-  .black-top-menu .left-menu {
-    margin-bottom: 12px;
-  }
-  .black-top-menu .left-menu li:first-child {
-    display: block;
-  }
   .black-top-menu .checkbox-filter {
-    margin-bottom: 10px;
-  }
-  .left-menu {
-    margin-bottom: 10px;
+    margin: 2px 0;
   }
   .main .top-grid-filter .filter-refine-by>ul>li {
     justify-content: flex-start;
@@ -5215,7 +5279,6 @@ header.sticky-top {
   }
 }
 
-
 @media (max-height: 480px) {
   .section .right-div {
     width: 100%;
@@ -5227,12 +5290,7 @@ header.sticky-top {
   .section .left-div {
     width: 50%;
   }
-}
-
-.filter_save_error {
-  background: #c21a05;
-}
-
-.filter_save_success {
-  background: #43ac6a;
+  .right-nav {
+    height: 280px;
+  }
 }
