--- a/templates/modals/newTypeDialog.html
+++ b/templates/modals/newTypeDialog.html
@@ -11,7 +11,7 @@
             <span class="v-align-middle">New</span>
         </label>
     </div>
-    <div class="d-flex mt-3 mb-4">
+    <div class="d-flex mt-3">
         <label class="radio mr-2" ng-hide="type == 'brands'">
             <input type="radio" ng-model="newType" value="advertisers" id="advertisers" ng-click="newCheckBox();" >
                 <span>Advertiser</span>
@@ -25,12 +25,11 @@
             <span>Creatives</span>
         </label>
     </div>
-</div>
-<div class="modal-footer">
-    <div class="btn-grp d-flex justify-content-end border-top pt-3">
+    <div class="btn-grp d-flex justify-content-end">
         <button id="cancelNet" class="btn btn-black" ng-click="closeModal();">
             <i class="fa fa-times" title="cancel" ></i>Cancel</button>
         <button id="applyNet" class="btn btn-blue" ng-click="applyModal();">
             <i class="fa fa-check" title="apply" ></i>Apply</button>
-    </div>
+    </div>    
 </div>
+
