--- a/templates/primary_filter.html
+++ b/templates/primary_filter.html
@@ -100,6 +100,7 @@
         <div class="response-type-text" ng-class="{'response-type-details' : !editable}">
            <div class="filter-view response-filter">
               Response Type -
+              <span class="text-disabled" ng-show="!editable">{{responseTypeText}}</span>
               <ul ng-show="editable">
                   <li class="radio-circular"  ng-class="{'active-alert' : response_header == 'or'}">
                       <input type="radio" id="or" name="response_typ" value=" or " ng-model="response_header" class="radio-custom" ng-click="setResponseTypes('or')"/>
@@ -115,10 +116,10 @@
                   </li>
               </ul>
            </div>
-           <div class="response-type-text editable-content">
-              <span class="text-disabled">{{responseTypeText}}</span>
-           </div>
-        </div>
+         </div>
+         <div class="response-type-text editable-content"  ng-show="editable">
+            <span class="text-disabled">{{responseTypeText}}</span>
+         </div>
 
         <ul class="response-menu" ng-show="editable">
             <li class="checkbox" ng-repeat="r in responseTypes" >
@@ -129,10 +130,10 @@
         </ul>
     </li>
     <li class="btn-wrapper">
-        <button class="btn btn-blue show-div edit btn-sm" ng-click="editableContent();" ng-hide="editable"><i class="fa fa-pencil" title="edit"></i>Edit</button>
-        <button class="btn btn-blue apply btn-sm"  ng-click="applyFilter()"><i class="fa fa-check" title="apply"></i>Apply</button>
-        <button class="btn btn-blue reset btn-sm"  ng-click="cancelFilter()"  ng-show="editable"><i class="fa fa-rotate-right" title="reset"></i>Reset</button>
-        <button class="btn btn-black hide-div cancel btn-sm" ng-show="editable" ng-click="cancelFilter()"><i class="fa fa-times" title="cancel"></i>Cancel</button>                            
+        <button class="btn btn-blue show-div edit btn-sm" ng-click="editableContent();addCustomClass();" ng-hide="editable"><i class="fa fa-pencil" title="edit"></i>Edit</button>
+        <button class="btn btn-blue apply btn-sm"  ng-click="applyFilter();removeCustomClass();"><i class="fa fa-check" title="apply"></i>Apply</button>
+        <button class="btn btn-blue reset btn-sm"  ng-click="cancelFilter();removeCustomClass();"  ng-show="editable"><i class="fa fa-rotate-right" title="reset"></i>Reset</button>
+        <button class="btn btn-black hide-div cancel btn-sm" ng-show="editable" ng-click="cancelFilter();removeCustomClass();"><i class="fa fa-times" title="cancel"></i>Cancel</button>  
     </li>
 </ul>
 <!-- Other date range popup -->
