--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -35,7 +35,7 @@
         </ul>
     </div>
     <!-- primary filter -->
-    <div class="main-filter" ng-show="headerDisplay == 1" ng-include="'templates/primary_filter.html'"></div>
+    <div class="main-filter" ng-show="headerDisplay == 1" ng-include="'templates/primary_filter.html'" ng-class="{'oneditclicked': ranking.no_edit==1}"></div>
 </div>
    
 <div class="main-container" id="ranking_page"  ><!--ng-init="initializeRankingPage();"-->
