--- a/templates/mainMenu.html
+++ b/templates/mainMenu.html
@@ -36,7 +36,7 @@
                     <span class="search-filter"
                         ng-class="!frmSearch.globalSearchInputText.$valid ? 'error-text-box':''">
                         <span class="search-icon">
-                            <i data-feather="search"></i>
+                            <img src="./assets/images/search-icon-10.svg" id="magnifying_glass" >
                         </span>
                         <input type="text" placeholder="Search Advertiser, Brand or Creative" autocomplete="off"
                             ng-model-options="{debounce: 250}" ng-model="globalSearchInputText"
