--- a/templates/modals/refineDialog.html
+++ b/templates/modals/refineDialog.html
@@ -16,7 +16,7 @@
         </label>
         <div class="search-input" ng-class="{'disabled-input' : refineBy == ''}">
             <span class="search-icon">
-                <i data-feather="search"></i>
+                <img src="./assets/images/search-icon-10.svg" id="magnifying_glass" >
             </span>
             <input type="text" name="searchByTfnUrl" class="searchNet searchRefine ng-pristine ng-valid ng-touched"
                 id="searchByTfnUrl"
