--- a/templates/modals/networkModalDialog.html
+++ b/templates/modals/networkModalDialog.html
@@ -25,9 +25,9 @@
                
                 <div class="search-input">
                     <span class="search-icon">
-                        <i data-feather="search"></i>
+                        <img src="./assets/images/search-icon-10.svg" id="magnifying_glass" >
                     </span>
-                    <input type="search" placeholder="Search a Network" ng-model="searchNet">
+                    <input type="text" placeholder="Search a Network" ng-model="searchNet">
                     <i class="fa fa-times-circle"  ng-hide="searchNet.length == 0" ></i>
                 </div>
             </li>
