--- a/templates/ranking.html
+++ b/templates/ranking.html
@@ -53,7 +53,7 @@
             <div class="network">
                 <div class="search-input">
                     <span class="search-icon">
-                        <i data-feather="search"></i>
+                        <img src="./assets/images/search-icon-10.svg" id="magnifying_glass" >
                     </span>
                     <input type="search" placeholder="Search Brands" ng-model="ranking.searchText" ng-keyup="filterGridWithSearchText()" id="globalSearchText">
                     <i class="fa fa-times-circle"></i>
