--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -702,7 +702,7 @@ input[type="checkbox"].checkbox-custom {
 
 .toggle:checked:before {
   left: 21px;
-  background: #202b39;
+  background: #00beff;
 }
 
 /*switch three */
@@ -3095,7 +3095,7 @@ header.sticky-top {
   position: relative;
   margin: auto;
   text-align: center;
-  max-width: 400px;
+  width: 320px;
   border: 1px solid #b6b1b1;
   margin-bottom: 10px;
 }
@@ -3998,7 +3998,7 @@ header.sticky-top {
 .common-dropdown {
   background: #fff;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, .5);
-  width: 230px;
+  width: 275px;
 }
 
 .common-dropdown a {
@@ -4047,6 +4047,28 @@ header.sticky-top {
   margin-left: 8px;
 }
 
+.whats-new.dropdown .dropdown-menu a {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-flow: row;
+  padding: 10px;
+  background: #fbfbfb;
+  font-size: 14px;
+  color: #004978;
+  border-bottom: 1px solid #cecece;
+  border-right: none;
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, .5);
+}
+
+.whats-new.dropdown .dropdown-menu .whatsnew-visited, .right-nav .dropdown-menu .whatsnew-visited{
+  background-color: #e5e5e5;
+}
+
+
+.whats-new.dropdown .dropdown-menu a:hover {
+  background: #EFE4CB;
+}
 
 /*user admin*/
 .super-admin-popup h5 {
