--- a/templates/eulaAgreement.html
+++ b/templates/eulaAgreement.html
@@ -1,7 +1,7 @@
 <section class="eula-agreement">
-    <div class="forgot-text text-center">
-        <img src="./assets/images/adspherelogo.png">
-        <h5>To continue using Adsphere, you must agree to the terms of license agreement.</h5>
+    <div class="eula-logo text-center">
+        <img src="./assets/images/adspherelogo.png" width="200">
+        <h6>To continue using Adsphere, you must agree to the terms of license agreement.</h6>
     </div>
     <div class="agreement-sec">
         <div class="information">
@@ -63,7 +63,7 @@
                 <p><span>MISCELLANEOUS.</span> This License will be construed and enforced in accordance with the laws of the State of California. Each
                     of the parties hereto hereby irrevocably submits to the exclusive jurisdiction of the federal and state courts situated
                     in Riverside County, California.</p></div>
-        <div class="btn-grp d-flex justify-content-end pt-3">
+        <div class="btn-grp text-center pt-3">
             <button class="btn btn-black mr-2" ng-click="eulaDisagree()">Disagree</button>
             <button class="btn btn-blue" ng-click="open()">Agree</button>
         </div>
