--- a/templates/modals/dowDialog.html
+++ b/templates/modals/dowDialog.html
@@ -4,26 +4,30 @@
         <span aria-hidden="true"></span>
     </button>
 </div>
-<div class="modal-body">
+<div class="modal-body all-days-week-popup">
     <ul class="heading-border">
         <li class="checkbox-radio">
-            <input type="radio" value="all"  ng-model="selectedWeekType" ng-change="adow(weeks)" class="radio-custom-checkbox">All Days of Week
-        </li>
+            <input type="radio" value="all" id="all_dow" ng-model="selectedWeekType" ng-model="selectedWeekType" ng-change="adow(weeks)" class="radio-custom-checkbox">
+            <label for="all_dow" class="radio-custom-checkbox-label ">All Days of Week</label>
+        </li>        
     </ul>
     <ul class="heading-border">                            
         <li class="checkbox-radio">
-            <input type="radio"  value="weekday" ng-model="selectedWeekType" ng-change="adow(selectedWeekType, weeks)" class="radio-custom-checkbox">Weekday
+            <input type="radio" value="weekday" id="weekday" ng-model="selectedWeekType" ng-change="adow(selectedWeekType, weeks)" class="radio-custom-checkbox">
+            <label for="weekday" class="radio-custom-checkbox-label">Weekday</label>
         </li>
         <li class="checkbox-radio">
-            <input type="radio" value="weekend"  ng-model="selectedWeekType" ng-change="adow(selectedWeekType, weeks)" class="radio-custom-checkbox">Weekend
+            <input type="radio" value="weekend" id="weekend" ng-model="selectedWeekType" ng-change="adow(selectedWeekType, weeks)" class="radio-custom-checkbox">
+            <label for="weekend" class="radio-custom-checkbox-label">Weekend</label>
         </li>
          <li class="checkbox-radio">
-            <input type="radio" value="custom" ng-model="selectedWeekType" ng-change="adow(selectedWeekType, weeks)" class="radio-custom-checkbox">Select Custom Day
+            <input type="radio" value="custom" id="custom" ng-model="selectedWeekType" ng-change="adow(selectedWeekType, weeks)" class="radio-custom-checkbox">
+            <label for="custom" class="radio-custom-checkbox-label">Select Custom Day</label>
         </li>
-    </ul>
+    </ul>    
     <ul>
-        <li class="checkbox" ng-repeat="week in weeks" >
-            <input type="checkbox" class="opt_day" ng-value="week.id" id="dow_{{week.id}}" ng-model="week.isSelected" ng-disabled="selectedWeekType != 'custom'"/>
+        <li class="checkbox" ng-repeat="week in weeks">
+            <input type="checkbox" class="opt_day" ng-value="week.id" id="dow_{{week.id}}" ng-model="week.isSelected" ng-disabled="selectedWeekType != 'custom'" value="3">
             <label for="dow_{{week.id}}">{{week.sortName}}</label>
         </li>
     </ul>
